[tool.poetry]
name = "libpython"
version = "0.1.0"
description = "Contains the preprocessing steps for the model-training repository."
authors = ["remla23-team08"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
nltk = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
