[tool.poetry]
name = "libpython"
version = "0.1.1"
description = "Contains the preprocessing steps for the model-training repository."
authors = ["remla23-team08"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
nltk = "^3.8.1"

[tool.poetry.dev-dependencies]
pylint = "^2.11.2"
dslinter = "^2.0.9"
black = "^23.3.0"
isort = "^5.12.0"

[tool.isort]
profile = "black"

[tool.bandit]
targets = ["src/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
